fix font on iphone

--- a/styles/base.less
+++ b/styles/base.less
@@ -23,7 +23,7 @@ body {
   //   "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
   //   "Fira Sans", "Droid Sans", "Helvetica Neue",
   //   sans-serif;
-  font-family: montserrat;
+  font-family: 'Montserrat', sans-serif;
   color: @black;
   background: @gray;
   font-size: 100%;
